# pqc-kaz

./: .gitignore  09.SSDID-Crypto-Specification.md  10.SSDID-KAZ-Sign-C-Library-Extension.md  CLAUDE.md  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
IdP/: IdP.sln
IdP/deploy/docker/: .env  docker-compose.dev.yml  docker-compose.observability.yml  docker-compose.yml  setup.sh
IdP/docs/: DEVELOPMENT_TODO.md
IdP/docs/api/: OPENAPI_SPECIFICATION.md
IdP/docs/architecture/: ACCOUNT_RECOVERY_FLOW.md  APP_ATTESTATION.md  ARCHITECTURE.md  AUTHENTICATION_FLOW.md  CERTIFICATE_ISSUANCE.md  CERTIFICATE_RENEWAL.md  CSR_GENERATION.md  DATABASE_SCHEMA.md  DEVICE_MANAGEMENT.md  (+3 more)
KEM/: BUGFIX_SUMMARY.md  CHANGELOG.md  Makefile  PQCkemKAT_34.req  PQCkemKAT_34.rsp  PQCkemKAT_50.req  PQCkemKAT_50.rsp  PQCkemKAT_66.req  PQCkemKAT_66.rsp  README.md
KEM/benchmarks/: benchmark_kem.c
KEM/bindings/android/kazkem/src/main/cpp/: CMakeLists.txt  kazkem_jni.cpp
KEM/bindings/rust/: Cargo.toml  build.rs
KEM/bindings/rust/src/: ffi.rs  lib.rs
KEM/bindings/rust/tests/: integration_test.rs
KEM/docs/: IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  OPTIMIZATIONS.md  PERFORMANCE_RESULTS.md  QUICK_START.md  README_OPTIMIZATION.md  RELEASE_NOTES_v1.0.0.md  REORGANIZATION_SUMMARY.md  TESTING.md  TEST_SUITE_SUMMARY.md  VERSIONING.md  VERSIONING_IMPLEMENTATION_SUMMARY.md
KEM/scripts/: run_tests.sh
SIGN/: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  PQCsignKAT_128.req  PQCsignKAT_128.rsp  PQCsignKAT_192.req  PQCsignKAT_192.rsp  PQCsignKAT_256.req  PQCsignKAT_256.rsp  README.md  SECURITY.md
SIGN/benchmarks/: benchmark_sign.c
SIGN/scripts/: build-linux-libs.sh
SIGN/tools/: PQCgenKAT_sign.c
docs/plans/: 2026-03-06-ssdid-kaz-sign-extensions-design.md  2026-03-06-ssdid-kaz-sign-extensions.md  2026-03-08-jcajce-alignment.md  2026-03-08-sign-algorithm-rewrite-design.md  2026-03-08-sign-algorithm-rewrite.md  2026-03-09-sign-v2.0-rewrite-design.md  2026-03-09-sign-v2.0-rewrite.md
(+1061 files in other folders)
