[package]
name = "kaz-kem"
version = "2.0.0"
edition = "2021"
description = "Rust bindings for KAZ-KEM post-quantum key encapsulation mechanism"
license = "MIT"
readme = "README.md"
repository = "https://github.com/AQM-Research-Lab/PQC-KAZ"
keywords = ["post-quantum", "cryptography", "kem", "key-encapsulation"]
categories = ["cryptography"]

[dependencies]
zeroize = "1"

[build-dependencies]
cc = "1"
pkg-config = "0.3"
